# Desktop-Worker

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: requirements.md
docs/dw/: cat_status.md  continue_dw_claude.bat  dw_backlog.md  dw_capabilities.md  dw_changelog.md  dw_claude_system_prompt.md  dw_design_grill.md  dw_drawing_v2_design.md  dw_manual_steps.md  dw_memory.md  dw_project_profile.md  dw_repo_audit.md  dw_roadmap.md  dw_self_check.md  dw_state.md  dw_task_packets.md  dw_test_guide.md  dw_tracker.html  dw_web_research.md  start_dw_claude.bat  status_dw.bat
src/desktop_worker/: __init__.py  __main__.py  app.py  config.py  util.py
tests/: test_actions_schema.py  test_ai_loop.py  test_audit_log.py  test_capture3d.py  test_claude_cli_planner.py  test_cli_broker.py  test_clipboard_roundtrip.py  test_drawing_director.py  test_emergency_stop.py  test_executor.py  test_geometry_canvas.py  test_geometry_dsl.py  test_geometry_paint_setup.py  test_geometry_preview.py  test_geometry_render.py  test_geometry_svg.py  test_harden.py  test_input_hardening.py  test_inspect3d.py  test_integration_do.py  test_loop_perception_wire.py  test_loop_recovery.py  test_mcp_bridge.py  test_mcp_server_e2e.py  test_mcp_server_register.py  test_observer_and_loop.py  test_orch_coordinator.py  test_orch_roles.py  test_orch_schema.py  test_perception_ocr.py  test_perception_uia.py  test_policy.py  test_profiles.py  test_report.py  test_retention.py  test_risk_classifier.py  test_tools.py  test_ui_app_tk.py  test_ui_controller.py  test_wf_browser.py  (+4 more)
(+65 files in other folders)
